--- a/index.html
+++ b/index.html
@@ -83,19 +83,17 @@
           Information Technology student with experience in web development and
           data encoding, building responsive websites and interfaces using
           multiple programming languages, WordPress, and basic SEO knowledge.
-          Enjoys working on UI/UX and visual design and is also skilled in
-          creative editing tasks such as photo and video editing with Canva and
-          Capcut. Previously worked as a data encoder, carefully recording and
+          Enjoys working on UI/UX and Previously worked as a data encoder, carefully recording and
           checking financial data from receipts in spreadsheets, building strong
           attention to detail, respect for confidentiality, and confidence
           working with data for analytics-focused roles.
         </p>
         <a
           class="read-more-btn"
-          href="/files/Jay_Neil_Pagalunan_CV.pdf"
-          download
-          >Download CV</a
-        >
+          href="PAGALUNAN_CV.pdf"
+          download="PAGALUNAN_CV.pdf"
+          >Download CV</a>
+        
       </div>
     </section>
 
@@ -552,5 +550,6 @@
     </script>
   </body>
 </html>
+
 
 
