--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           Information Technology student with experience in web development and
           data encoding, building responsive websites and interfaces using
           multiple programming languages, WordPress, and basic SEO knowledge.
-          Enjoys working on UI/UX and Previously worked as a data encoder, carefully recording and
+          Enjoys working on UI/UX and previously worked as a data encoder, carefully recording and
           checking financial data from receipts in spreadsheets, building strong
           attention to detail, respect for confidentiality, and confidence
           working with data for analytics-focused roles.
@@ -550,6 +550,7 @@
     </script>
   </body>
 </html>
+
 
 
 
